Fixed berlin.de header
there were some confict in the css so the header was a bit messed up

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -111,4 +111,9 @@ h3{
   .container-wrapper{
       width: 100%;
       margin-bottom: 0px !important;
+
+      .container{
+          padding: 0;
+          width: 61.25rem;
+      }
   }
